src/shaders/snapshots/vulkan_slang_renderer__shaders__build_tasks__tests__std430_alignment_tests@shaders__compiled__std430_vec3_padding.json.snap
---
source: src/shaders/build_tasks.rs
info:
  relative_path: shaders/compiled/std430_vec3_padding.json
---
{
  "sourceFileName": "std430_vec3_padding.shader.slang",
  "globalParameters": [
    {
      "kind": "parameterBlock",
      "parameterName": "params",
      "elementType": {
        "typeName": "Params",
        "fields": [
          {
            "kind": "resource",
            "fieldName": "data",
            "binding": {
              "kind": "descriptorTableSlot",
              "index": 0,
              "count": 1
            },
            "resourceShape": "structuredBuffer",
            "resultType": {
              "kind": "struct",
              "typeName": "Vec3Data",
              "fields": [
                {
                  "kind": "vector",
                  "fieldName": "a",
                  "binding": {
                    "kind": "uniform",
                    "offset": 0,
                    "size": 12
                  },
                  "elementCount": 3,
                  "elementType": {
                    "kind": "scalar",
                    "scalarType": "float32"
                  }
                },
                {
                  "kind": "scalar",
                  "fieldName": "b",
                  "binding": {
                    "kind": "uniform",
                    "offset": 12,
                    "size": 4
                  },
                  "scalarType": "float32"
                },
                {
                  "kind": "vector",
                  "fieldName": "c",
                  "binding": {
                    "kind": "uniform",
                    "offset": 16,
                    "size": 12
                  },
                  "elementCount": 3,
                  "elementType": {
                    "kind": "scalar",
                    "scalarType": "float32"
                  }
                },
                {
                  "kind": "scalar",
                  "fieldName": "d",
                  "binding": {
                    "kind": "uniform",
                    "offset": 28,
                    "size": 4
                  },
                  "scalarType": "float32"
                }
              ]
            }
          }
        ]
      }
    }
  ],
  "vertexEntryPoint": {
    "entryPointName": "vertMain",
    "stage": "vertex",
    "parameters": [
      {
        "kind": "scalar",
        "parameterName": "id",
        "semanticName": "SV_VERTEXID",
        "scalarType": "uint32"
      }
    ]
  },
  "fragmentEntryPoint": {
    "entryPointName": "fragMain",
    "stage": "fragment",
    "parameters": []
  },
  "pipelineLayout": {
    "descriptorSetLayouts": [
      {
        "bindingRanges": [
          {
            "binding": 0,
            "descriptorType": "storageBuffer",
            "descriptorCount": 1,
            "stageFlags": "all",
            "size": 0
          }
        ]
      }
    ],
    "pushConstantRanges": []
  }
}
